--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "\"Rohit Singh\"",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "mongoose": "^9.1.2"
   }
 }
