--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cookie": "^1.1.1",
+    "cookie-parser": "^1.4.7",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.2",
+    "parser": "^0.1.4",
     "validator": "^13.15.26"
   }
 }
